# PrivUnit

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-desktop.yml
docs/: architecture.md
resources/ocr/rapidocr/: manifest.json
scripts/: build_desktop.ps1  build_desktop.sh  build_desktop_linux.sh  build_sidecar.py  verify_bundle.py  verify_sidecar.py
sidecar/redactor/: __init__.py  analysis.py  cli.py  colors.py  detection.py  exporter.py  models.py  ocr.py  ocr_models.py  serde.py  validation.py  vision.py  vision_assets.py
src/: App.tsx  constants.ts  i18n.test.ts  i18n.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/services/: sidecar.test.ts  sidecar.ts
src/utils/: files.test.ts  files.ts  pageLayout.test.ts  pageLayout.ts
tests/: test_build_sidecar.py  test_core.py  test_ocr_models.py  test_sidecar_cli.py  test_tauri_capabilities.py  test_verify_bundle.py  test_verify_sidecar.py  test_vision_assets.py
