[project]
name = "privunit-sidecar"
version = "0.1.0"
description = "Offline PDF and image redaction sidecar for PrivUnit."
requires-python = ">=3.10"
license = "AGPL-3.0-only"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "pillow>=10.0",
  "pymupdf>=1.24",
  "onnxruntime>=1.16"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "reportlab>=4.0"
]
ocr = [
  "rapidocr-onnxruntime>=1.3"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["sidecar"]
