[package]
name = "privunit"
version = "0.1.0"
description = "PrivUnit PDF and image redaction desktop client"
authors = ["PrivUnit"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "privunit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
